--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -277,7 +277,7 @@
             const catSafeZone = dims.catSize * 1.5; // 猫咪安全区域
 
             // 将屏幕垂直方向分为三个区域：上、中、下
-            const topZone = { min: catSafeZone, max: canvas.height * 0.33 };
+            const topZone = { min: catSafeZone, max: Math.max(catSafeZone + 50, canvas.height * 0.33) };
             const middleZone = { min: canvas.height * 0.33, max: canvas.height * 0.66 };
             const bottomZone = { min: canvas.height * 0.66, max: canvas.height - catSafeZone };
 
@@ -285,16 +285,37 @@
             const zoneRandom = Math.random();
             let selectedZone;
 
-            if (zoneRandom < 0.4) {
-              // 40%概率在上部或下部
-              selectedZone = Math.random() < 0.5 ? topZone : bottomZone;
+            // 检查各区域是否有效（确保有足够空间）
+            const topZoneValid = topZone.max > topZone.min + 30;
+            const bottomZoneValid = bottomZone.max > bottomZone.min + 30;
+
+            console.log(
+              `区域检查 - 上区域: ${topZone.min}-${topZone.max} (有效:${topZoneValid}), 中区域: ${middleZone.min}-${middleZone.max}, 下区域: ${bottomZone.min}-${bottomZone.max} (有效:${bottomZoneValid})`,
+            );
+
+            if (zoneRandom < 0.4 && (topZoneValid || bottomZoneValid)) {
+              // 40%概率在上部或下部（但只在有效区域中选择）
+              if (topZoneValid && bottomZoneValid) {
+                selectedZone = Math.random() < 0.5 ? topZone : bottomZone;
+              } else if (topZoneValid) {
+                selectedZone = topZone;
+              } else {
+                selectedZone = bottomZone;
+              }
             } else {
-              // 60%概率在中部
+              // 60%概率在中部，或者上下区域都无效时强制中部
               selectedZone = middleZone;
             }
 
             // 在选定区域内随机生成位置
-            this.y = Math.random() * (selectedZone.max - selectedZone.min) + selectedZone.min;
+            const zoneHeight = selectedZone.max - selectedZone.min;
+            this.y = Math.max(selectedZone.min, Math.random() * zoneHeight + selectedZone.min);
+
+            console.log(
+              `障碍物生成在区域: ${
+                selectedZone === topZone ? '上' : selectedZone === middleZone ? '中' : '下'
+              }, Y位置: ${this.y}`,
+            );
 
             // 确保不会完全堵住通道
             if (this.height > canvas.height * 0.4) {
