--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -34,17 +34,21 @@
 
       /* 游戏容器 */
       .game-container {
-        position: fixed;
-        inset: 0;
+        position: relative;
+        width: 100vw;
+        height: 100vh;
         overflow: hidden;
+        background: #000;
       }
 
       /* 游戏画布 */
       #gameCanvas {
         position: absolute;
-        inset: 0;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        display: block;
       }
 
       /* 猫咪角色 */
@@ -237,9 +241,9 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          // 在iframe中使用window尺寸而不是document尺寸
-          const vw = window.innerWidth;
-          const vh = window.innerHeight;
+          // 在iframe中使用canvas的实际尺寸
+          const vw = canvas.width || window.innerWidth;
+          const vh = canvas.height || window.innerHeight;
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
@@ -275,13 +279,10 @@
 
             // 优化垂直位置分布
             const availableSpace = canvas.height - this.height;
-            // 减小安全区域，给上区域更多空间
-            const catSafeZone = dims.catSize * 0.8; // 减少安全区域
-
-            console.log(`Canvas高度: ${canvas.height}, 猫咪尺寸: ${dims.catSize}, 安全区域: ${catSafeZone}`);
+            const catSafeZone = dims.catSize * 1.5; // 猫咪安全区域
 
             // 将屏幕垂直方向分为三个区域：上、中、下
-            const topZone = { min: 10, max: Math.max(catSafeZone + 80, canvas.height * 0.33) }; // 从顶部10px开始
+            const topZone = { min: catSafeZone, max: Math.max(catSafeZone + 50, canvas.height * 0.33) };
             const middleZone = { min: canvas.height * 0.33, max: canvas.height * 0.66 };
             const bottomZone = { min: canvas.height * 0.66, max: canvas.height - catSafeZone };
 
@@ -297,18 +298,17 @@
               `区域检查 - 上区域: ${topZone.min}-${topZone.max} (有效:${topZoneValid}), 中区域: ${middleZone.min}-${middleZone.max}, 下区域: ${bottomZone.min}-${bottomZone.max} (有效:${bottomZoneValid})`,
             );
 
-            // 强制确保三个区域都有机会被选中
-            if (zoneRandom < 0.33 && topZoneValid) {
-              // 33%概率在上部
-              selectedZone = topZone;
-            } else if (zoneRandom < 0.66) {
-              // 33%概率在中部
-              selectedZone = middleZone;
-            } else if (bottomZoneValid) {
-              // 34%概率在下部
-              selectedZone = bottomZone;
+            if (zoneRandom < 0.4 && (topZoneValid || bottomZoneValid)) {
+              // 40%概率在上部或下部（但只在有效区域中选择）
+              if (topZoneValid && bottomZoneValid) {
+                selectedZone = Math.random() < 0.5 ? topZone : bottomZone;
+              } else if (topZoneValid) {
+                selectedZone = topZone;
+              } else {
+                selectedZone = bottomZone;
+              }
             } else {
-              // 如果下区域无效，回退到中区域
+              // 60%概率在中部，或者上下区域都无效时强制中部
               selectedZone = middleZone;
             }
 
@@ -316,11 +316,10 @@
             const zoneHeight = selectedZone.max - selectedZone.min;
             this.y = Math.max(selectedZone.min, Math.random() * zoneHeight + selectedZone.min);
 
-            const zoneName = selectedZone === topZone ? '上' : selectedZone === middleZone ? '中' : '下';
             console.log(
-              `随机数: ${zoneRandom.toFixed(3)}, 选中区域: ${zoneName}, Y位置: ${this.y.toFixed(
-                1,
-              )}, 区域范围: ${selectedZone.min.toFixed(1)}-${selectedZone.max.toFixed(1)}`,
+              `障碍物生成在区域: ${
+                selectedZone === topZone ? '上' : selectedZone === middleZone ? '中' : '下'
+              }, Y位置: ${this.y}`,
             );
 
             // 确保不会完全堵住通道
@@ -426,9 +425,10 @@
           });
 
           window.addEventListener('resize', () => {
-            // 使用window尺寸来设置Canvas大小
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
+            // 获取iframe内的实际可用空间
+            const rect = canvas.parentElement.getBoundingClientRect();
+            canvas.width = rect.width || window.innerWidth;
+            canvas.height = rect.height || window.innerHeight;
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
             console.log(`Canvas尺寸调整: ${canvas.width} x ${canvas.height}`);
@@ -605,10 +605,16 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 使用window尺寸而不是document尺寸
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-        console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height}`);
+        // 初始化 - 获取iframe内的实际可用空间
+        const initializeCanvas = () => {
+          const rect = canvas.parentElement.getBoundingClientRect();
+          canvas.width = rect.width || window.innerWidth;
+          canvas.height = rect.height || window.innerHeight;
+          console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height}, 父元素尺寸: ${rect.width}x${rect.height}`);
+        };
+
+        // 延迟初始化，确保DOM完全加载
+        setTimeout(initializeCanvas, 100);
         nyanCat.style.display = 'none';
         bgm.volume = 1.0;
         bgm.load();
