--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -36,7 +36,7 @@
       .game-container {
         position: relative;
         width: 100vw;
-        height: 100vh;
+        min-height: 60vh;
         overflow: hidden;
         background: #000;
       }
