--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -34,9 +34,11 @@
 
       /* 游戏容器 */
       .game-container {
-        position: relative;
-        width: 100vw;
-        min-height: 60vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: min(70vh, 400px); /* 限制高度，适合横屏游戏 */
         overflow: hidden;
         background: #000;
       }
@@ -241,9 +243,12 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          // 在iframe中使用canvas的实际尺寸
-          const vw = canvas.width || window.innerWidth;
-          const vh = canvas.height || window.innerHeight;
+          // 使用游戏容器的实际尺寸
+          const gameContainer = document.querySelector('.game-container');
+          const vw = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
+          const vh = gameContainer
+            ? gameContainer.clientHeight
+            : Math.min(document.documentElement.clientHeight * 0.7, 400);
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
@@ -425,13 +430,15 @@
           });
 
           window.addEventListener('resize', () => {
-            // 获取iframe内的实际可用空间
-            const rect = canvas.parentElement.getBoundingClientRect();
-            canvas.width = rect.width || window.innerWidth;
-            canvas.height = rect.height || window.innerHeight;
+            // 使用游戏容器的尺寸
+            const gameContainer = document.querySelector('.game-container');
+            canvas.width = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
+            canvas.height = gameContainer
+              ? gameContainer.clientHeight
+              : Math.min(document.documentElement.clientHeight * 0.7, 400);
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(`Canvas尺寸调整: ${canvas.width} x ${canvas.height}`);
+            console.log(`Canvas尺寸调整: ${canvas.width} x ${canvas.height} (容器限制)`);
           });
         }
 
@@ -605,16 +612,13 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 获取iframe内的实际可用空间
-        const initializeCanvas = () => {
-          const rect = canvas.parentElement.getBoundingClientRect();
-          canvas.width = rect.width || window.innerWidth;
-          canvas.height = rect.height || window.innerHeight;
-          console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height}, 父元素尺寸: ${rect.width}x${rect.height}`);
-        };
-
-        // 延迟初始化，确保DOM完全加载
-        setTimeout(initializeCanvas, 100);
+        // 初始化 - 使用游戏容器的尺寸
+        const gameContainer = document.querySelector('.game-container');
+        canvas.width = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
+        canvas.height = gameContainer
+          ? gameContainer.clientHeight
+          : Math.min(document.documentElement.clientHeight * 0.7, 400);
+        console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height} (横屏优化)`);
         nyanCat.style.display = 'none';
         bgm.volume = 1.0;
         bgm.load();
