--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -38,7 +38,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: min(70vh, 400px); /* 限制高度，适合横屏游戏 */
+        height: 100%; /* 使用iframe给定的全部空间 */
         overflow: hidden;
         background: #000;
       }
@@ -243,12 +243,10 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          // 使用游戏容器的实际尺寸
+          // 使用游戏容器的实际尺寸，不再限制高度
           const gameContainer = document.querySelector('.game-container');
           const vw = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
-          const vh = gameContainer
-            ? gameContainer.clientHeight
-            : Math.min(document.documentElement.clientHeight * 0.7, 400);
+          const vh = gameContainer ? gameContainer.clientHeight : document.documentElement.clientHeight;
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
@@ -430,15 +428,13 @@
           });
 
           window.addEventListener('resize', () => {
-            // 使用游戏容器的尺寸
+            // 使用游戏容器的尺寸，不再限制高度
             const gameContainer = document.querySelector('.game-container');
             canvas.width = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
-            canvas.height = gameContainer
-              ? gameContainer.clientHeight
-              : Math.min(document.documentElement.clientHeight * 0.7, 400);
+            canvas.height = gameContainer ? gameContainer.clientHeight : document.documentElement.clientHeight;
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(`Canvas尺寸调整: ${canvas.width} x ${canvas.height} (容器限制)`);
+            console.log(`Canvas尺寸调整: ${canvas.width} x ${canvas.height} (使用全部iframe空间)`);
           });
         }
 
@@ -612,13 +608,11 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 使用游戏容器的尺寸
+        // 初始化 - 使用游戏容器的全部尺寸
         const gameContainer = document.querySelector('.game-container');
         canvas.width = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
-        canvas.height = gameContainer
-          ? gameContainer.clientHeight
-          : Math.min(document.documentElement.clientHeight * 0.7, 400);
-        console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height} (横屏优化)`);
+        canvas.height = gameContainer ? gameContainer.clientHeight : document.documentElement.clientHeight;
+        console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height} (使用全部iframe空间)`);
         nyanCat.style.display = 'none';
         bgm.volume = 1.0;
         bgm.load();
