--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -35,22 +35,18 @@
       /* 游戏容器 */
       .game-container {
         position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%; /* 使用iframe给定的全部空间 */
+        inset: 0;
         overflow: hidden;
-        background: #000;
+        width: 100vw;
+        height: 100vh;
       }
 
       /* 游戏画布 */
       #gameCanvas {
         position: absolute;
-        top: 0;
-        left: 0;
+        inset: 0;
         width: 100%;
         height: 100%;
-        display: block;
       }
 
       /* 猫咪角色 */
@@ -243,10 +239,9 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          // 使用游戏容器的实际尺寸，不再限制高度
-          const gameContainer = document.querySelector('.game-container');
-          const vw = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
-          const vh = gameContainer ? gameContainer.clientHeight : document.documentElement.clientHeight;
+          // 优先使用iframe的可视区域
+          const vw = window.innerWidth || document.documentElement.clientWidth;
+          const vh = window.innerHeight || document.documentElement.clientHeight;
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
@@ -428,13 +423,14 @@
           });
 
           window.addEventListener('resize', () => {
-            // 使用游戏容器的尺寸，不再限制高度
-            const gameContainer = document.querySelector('.game-container');
-            canvas.width = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
-            canvas.height = gameContainer ? gameContainer.clientHeight : document.documentElement.clientHeight;
+            // 使用iframe的实际可视区域
+            canvas.width = window.innerWidth || document.documentElement.clientWidth;
+            canvas.height = window.innerHeight || document.documentElement.clientHeight;
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(`Canvas尺寸调整: ${canvas.width} x ${canvas.height} (使用全部iframe空间)`);
+            console.log(
+              `Canvas调整: ${canvas.width} x ${canvas.height}, 窗口: ${window.innerWidth} x ${window.innerHeight}`,
+            );
           });
         }
 
@@ -608,17 +604,32 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 使用游戏容器的全部尺寸
-        const gameContainer = document.querySelector('.game-container');
-        canvas.width = gameContainer ? gameContainer.clientWidth : document.documentElement.clientWidth;
-        canvas.height = gameContainer ? gameContainer.clientHeight : document.documentElement.clientHeight;
-        console.log(`初始Canvas尺寸: ${canvas.width} x ${canvas.height} (使用全部iframe空间)`);
-        nyanCat.style.display = 'none';
-        bgm.volume = 1.0;
-        bgm.load();
-        gameState.stars = createStars(); // 初始化星星
-        setupEventListeners();
-        gameLoop();
+        // 初始化 - 确保使用正确的iframe尺寸
+        function initCanvas() {
+          canvas.width = window.innerWidth || document.documentElement.clientWidth;
+          canvas.height = window.innerHeight || document.documentElement.clientHeight;
+          console.log(
+            `初始Canvas: ${canvas.width} x ${canvas.height}, iframe窗口: ${window.innerWidth} x ${window.innerHeight}`,
+          );
+
+          // 强制触发一次resize事件，确保尺寸正确
+          setTimeout(() => {
+            window.dispatchEvent(new Event('resize'));
+          }, 100);
+        }
+
+        // 延迟初始化，确保iframe完全加载
+        setTimeout(() => {
+          initCanvas();
+          nyanCat.style.display = 'none';
+          bgm.volume = 1.0;
+          bgm.load();
+          gameState.stars = createStars(); // 初始化星星
+          setupEventListeners();
+
+          // 开始游戏循环
+          requestAnimationFrame(gameLoop);
+        }, 200);
       });
     </script>
   </body>
