--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -34,11 +34,12 @@
 
       /* 游戏容器 */
       .game-container {
-        position: fixed;
-        inset: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         overflow: hidden;
-        width: 100vw;
-        height: 100vh;
       }
 
       /* 游戏画布 */
@@ -239,9 +240,10 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          // 优先使用iframe的可视区域
-          const vw = window.innerWidth || document.documentElement.clientWidth;
-          const vh = window.innerHeight || document.documentElement.clientHeight;
+          // 使用iframe容器的实际尺寸，不是视口尺寸
+          const container = document.querySelector('.game-container');
+          const vw = container ? container.clientWidth : window.innerWidth;
+          const vh = container ? container.clientHeight : window.innerHeight;
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
@@ -423,14 +425,13 @@
           });
 
           window.addEventListener('resize', () => {
-            // 使用iframe的实际可视区域
-            canvas.width = window.innerWidth || document.documentElement.clientWidth;
-            canvas.height = window.innerHeight || document.documentElement.clientHeight;
+            // 使用容器的实际尺寸
+            const container = document.querySelector('.game-container');
+            canvas.width = container ? container.clientWidth : window.innerWidth;
+            canvas.height = container ? container.clientHeight : window.innerHeight;
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(
-              `Canvas调整: ${canvas.width} x ${canvas.height}, 窗口: ${window.innerWidth} x ${window.innerHeight}`,
-            );
+            console.log(`Canvas调整: ${canvas.width} x ${canvas.height}`);
           });
         }
 
@@ -604,13 +605,12 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 确保使用正确的iframe尺寸
+        // 初始化 - 使用容器尺寸而非视口尺寸
         function initCanvas() {
-          canvas.width = window.innerWidth || document.documentElement.clientWidth;
-          canvas.height = window.innerHeight || document.documentElement.clientHeight;
-          console.log(
-            `初始Canvas: ${canvas.width} x ${canvas.height}, iframe窗口: ${window.innerWidth} x ${window.innerHeight}`,
-          );
+          const container = document.querySelector('.game-container');
+          canvas.width = container ? container.clientWidth : window.innerWidth;
+          canvas.height = container ? container.clientHeight : window.innerHeight;
+          console.log(`初始Canvas: ${canvas.width} x ${canvas.height}, 容器: ${container ? 'found' : 'not found'}`);
 
           // 强制触发一次resize事件，确保尺寸正确
           setTimeout(() => {
