--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -39,15 +39,21 @@
         left: 0;
         width: 100%;
         height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #000;
         overflow: hidden;
       }
 
       /* 游戏画布 */
       #gameCanvas {
-        position: absolute;
-        inset: 0;
-        width: 100%;
-        height: 100%;
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        aspect-ratio: 16/9; /* 设定游戏的宽高比 */
+        background: #000;
       }
 
       /* 猫咪角色 */
@@ -240,10 +246,29 @@
 
         // 游戏尺寸计算
         function calculateGameDimensions() {
-          // 使用iframe容器的实际尺寸，不是视口尺寸
+          // 计算游戏的理想尺寸（16:9比例）
           const container = document.querySelector('.game-container');
-          const vw = container ? container.clientWidth : window.innerWidth;
-          const vh = container ? container.clientHeight : window.innerHeight;
+          const containerWidth = container ? container.clientWidth : window.innerWidth;
+          const containerHeight = container ? container.clientHeight : window.innerHeight;
+
+          // 游戏设计尺寸（16:9比例）
+          const gameAspectRatio = 16 / 9;
+          const containerAspectRatio = containerWidth / containerHeight;
+
+          let gameWidth, gameHeight;
+
+          if (containerAspectRatio > gameAspectRatio) {
+            // 容器更宽，以高度为准
+            gameHeight = containerHeight * 0.9; // 留一些边距
+            gameWidth = gameHeight * gameAspectRatio;
+          } else {
+            // 容器更高，以宽度为准
+            gameWidth = containerWidth * 0.9; // 留一些边距
+            gameHeight = gameWidth / gameAspectRatio;
+          }
+
+          const vw = gameWidth;
+          const vh = gameHeight;
           const isMobile = vw <= 768;
           const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
@@ -258,6 +283,8 @@
             gravity: 0.4 * scale * (isMobile ? 1 : 1.2),
             speed: 4 * scale * (isMobile ? 0.8 : 1),
             scale,
+            gameWidth, // 游戏实际宽度
+            gameHeight, // 游戏实际高度
           };
         }
 
@@ -425,13 +452,14 @@
           });
 
           window.addEventListener('resize', () => {
-            // 使用容器的实际尺寸
-            const container = document.querySelector('.game-container');
-            canvas.width = container ? container.clientWidth : window.innerWidth;
-            canvas.height = container ? container.clientHeight : window.innerHeight;
+            // 重新计算游戏尺寸
             const dims = calculateGameDimensions();
+            canvas.width = dims.gameWidth;
+            canvas.height = dims.gameHeight;
+            canvas.style.width = dims.gameWidth + 'px';
+            canvas.style.height = dims.gameHeight + 'px';
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(`Canvas调整: ${canvas.width} x ${canvas.height}`);
+            console.log(`Canvas调整: ${dims.gameWidth} x ${dims.gameHeight} (等比缩放)`);
           });
         }
 
@@ -605,12 +633,14 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 使用容器尺寸而非视口尺寸
+        // 初始化 - 计算等比缩放的游戏尺寸
         function initCanvas() {
-          const container = document.querySelector('.game-container');
-          canvas.width = container ? container.clientWidth : window.innerWidth;
-          canvas.height = container ? container.clientHeight : window.innerHeight;
-          console.log(`初始Canvas: ${canvas.width} x ${canvas.height}, 容器: ${container ? 'found' : 'not found'}`);
+          const dims = calculateGameDimensions();
+          canvas.width = dims.gameWidth;
+          canvas.height = dims.gameHeight;
+          canvas.style.width = dims.gameWidth + 'px';
+          canvas.style.height = dims.gameHeight + 'px';
+          console.log(`初始Canvas: ${dims.gameWidth} x ${dims.gameHeight} (16:9等比缩放)`);
 
           // 强制触发一次resize事件，确保尺寸正确
           setTimeout(() => {
