--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -39,20 +39,17 @@
         left: 0;
         width: 100%;
         height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: #000;
         overflow: hidden;
+        background: #000;
       }
 
       /* 游戏画布 */
       #gameCanvas {
-        max-width: 100%;
-        max-height: 100%;
-        width: auto;
-        height: auto;
-        aspect-ratio: 16/9; /* 设定游戏的宽高比 */
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         background: #000;
       }
 
@@ -222,7 +219,7 @@
 
         // 游戏状态
         let gameState = {
-          catY: window.innerHeight / 2,
+          catY: 200, // 固定较小的初始位置
           velocity: 0,
           gravity: 0.4,
           flyForce: -0.3,
@@ -244,47 +241,26 @@
           touchActive: false,
         };
 
-        // 游戏尺寸计算
+        // 游戏尺寸计算 - 确保适应iframe容器
         function calculateGameDimensions() {
-          // 计算游戏的理想尺寸（16:9比例）
           const container = document.querySelector('.game-container');
-          const containerWidth = container ? container.clientWidth : window.innerWidth;
-          const containerHeight = container ? container.clientHeight : window.innerHeight;
-
-          // 游戏设计尺寸（16:9比例）
-          const gameAspectRatio = 16 / 9;
-          const containerAspectRatio = containerWidth / containerHeight;
-
-          let gameWidth, gameHeight;
-
-          if (containerAspectRatio > gameAspectRatio) {
-            // 容器更宽，以高度为准
-            gameHeight = containerHeight * 0.9; // 留一些边距
-            gameWidth = gameHeight * gameAspectRatio;
-          } else {
-            // 容器更高，以宽度为准
-            gameWidth = containerWidth * 0.9; // 留一些边距
-            gameHeight = gameWidth / gameAspectRatio;
-          }
-
-          const vw = gameWidth;
-          const vh = gameHeight;
+          const vw = container ? container.clientWidth : window.innerWidth;
+          const vh = container ? container.clientHeight : window.innerHeight;
           const isMobile = vw <= 768;
-          const scale = Math.min(1, Math.max(0.5, Math.min(vw / 1920, vh / 1080)));
+          // 缩小scale，确保游戏适应较小的iframe
+          const scale = Math.min(0.7, Math.max(0.3, Math.min(vw / 1920, vh / 1080)));
           const catSize = isMobile
-            ? Math.max(80, Math.min(vw * 0.15, vh * 0.15))
-            : Math.max(120, Math.min(vw * 0.2, vh * 0.2));
+            ? Math.max(40, Math.min(vw * 0.08, vh * 0.08)) // 缩小猫咪
+            : Math.max(60, Math.min(vw * 0.1, vh * 0.1));
 
           return {
             catSize,
-            obstacleWidth: Math.min(20 * scale, vw * 0.03) * (isMobile ? 0.8 : 1.2),
-            obstacleGap: Math.min(300 * scale, vw * 0.3),
-            jumpForce: -8 * scale * (isMobile ? 1 : 1.2),
-            gravity: 0.4 * scale * (isMobile ? 1 : 1.2),
-            speed: 4 * scale * (isMobile ? 0.8 : 1),
+            obstacleWidth: Math.min(15 * scale, vw * 0.02), // 缩小障碍物
+            obstacleGap: Math.min(200 * scale, vw * 0.2), // 缩小间距
+            jumpForce: -6 * scale, // 缩小跳跃力度
+            gravity: 0.3 * scale, // 缩小重力
+            speed: 3 * scale, // 缩小移动速度
             scale,
-            gameWidth, // 游戏实际宽度
-            gameHeight, // 游戏实际高度
           };
         }
 
@@ -452,14 +428,13 @@
           });
 
           window.addEventListener('resize', () => {
-            // 重新计算游戏尺寸
+            // 使用容器的实际尺寸
+            const container = document.querySelector('.game-container');
+            canvas.width = container ? container.clientWidth : window.innerWidth;
+            canvas.height = container ? container.clientHeight : window.innerHeight;
             const dims = calculateGameDimensions();
-            canvas.width = dims.gameWidth;
-            canvas.height = dims.gameHeight;
-            canvas.style.width = dims.gameWidth + 'px';
-            canvas.style.height = dims.gameHeight + 'px';
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(`Canvas调整: ${dims.gameWidth} x ${dims.gameHeight} (等比缩放)`);
+            console.log(`Canvas调整: ${canvas.width} x ${canvas.height} (缩小适应)`);
           });
         }
 
@@ -633,14 +608,12 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 计算等比缩放的游戏尺寸
+        // 初始化 - 使用容器尺寸，缩小游戏内容
         function initCanvas() {
-          const dims = calculateGameDimensions();
-          canvas.width = dims.gameWidth;
-          canvas.height = dims.gameHeight;
-          canvas.style.width = dims.gameWidth + 'px';
-          canvas.style.height = dims.gameHeight + 'px';
-          console.log(`初始Canvas: ${dims.gameWidth} x ${dims.gameHeight} (16:9等比缩放)`);
+          const container = document.querySelector('.game-container');
+          canvas.width = container ? container.clientWidth : window.innerWidth;
+          canvas.height = container ? container.clientHeight : window.innerHeight;
+          console.log(`初始Canvas: ${canvas.width} x ${canvas.height} (适应iframe)`);
 
           // 强制触发一次resize事件，确保尺寸正确
           setTimeout(() => {
