--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -40,17 +40,14 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        background: #000;
       }
 
       /* 游戏画布 */
       #gameCanvas {
         position: absolute;
-        top: 0;
-        left: 0;
+        inset: 0;
         width: 100%;
         height: 100%;
-        background: #000;
       }
 
       /* 猫咪角色 */
@@ -219,7 +216,7 @@
 
         // 游戏状态
         let gameState = {
-          catY: 200, // 固定较小的初始位置
+          catY: window.innerHeight / 2,
           velocity: 0,
           gravity: 0.4,
           flyForce: -0.3,
@@ -241,25 +238,26 @@
           touchActive: false,
         };
 
-        // 游戏尺寸计算 - 确保适应iframe容器
+        // 游戏尺寸计算
         function calculateGameDimensions() {
+          // 使用iframe容器的实际尺寸，不是整个窗口
           const container = document.querySelector('.game-container');
           const vw = container ? container.clientWidth : window.innerWidth;
           const vh = container ? container.clientHeight : window.innerHeight;
           const isMobile = vw <= 768;
-          // 缩小scale，确保游戏适应较小的iframe
-          const scale = Math.min(0.7, Math.max(0.3, Math.min(vw / 1920, vh / 1080)));
+          // 针对小窗口优化缩放
+          const scale = Math.min(0.8, Math.max(0.3, Math.min(vw / 800, vh / 600)));
           const catSize = isMobile
-            ? Math.max(40, Math.min(vw * 0.08, vh * 0.08)) // 缩小猫咪
-            : Math.max(60, Math.min(vw * 0.1, vh * 0.1));
+            ? Math.max(30, Math.min(vw * 0.08, vh * 0.08))
+            : Math.max(40, Math.min(vw * 0.1, vh * 0.1));
 
           return {
             catSize,
-            obstacleWidth: Math.min(15 * scale, vw * 0.02), // 缩小障碍物
-            obstacleGap: Math.min(200 * scale, vw * 0.2), // 缩小间距
-            jumpForce: -6 * scale, // 缩小跳跃力度
-            gravity: 0.3 * scale, // 缩小重力
-            speed: 3 * scale, // 缩小移动速度
+            obstacleWidth: Math.min(15 * scale, vw * 0.02),
+            obstacleGap: Math.min(200 * scale, vw * 0.25),
+            jumpForce: -6 * scale,
+            gravity: 0.3 * scale,
+            speed: 3 * scale,
             scale,
           };
         }
@@ -434,7 +432,9 @@
             canvas.height = container ? container.clientHeight : window.innerHeight;
             const dims = calculateGameDimensions();
             document.documentElement.style.setProperty('--cat-size', `${dims.catSize}px`);
-            console.log(`Canvas调整: ${canvas.width} x ${canvas.height} (缩小适应)`);
+            console.log(
+              `Canvas调整: ${canvas.width} x ${canvas.height}, 窗口: ${window.innerWidth} x ${window.innerHeight}`,
+            );
           });
         }
 
@@ -608,12 +608,14 @@
           isPlaying = !isPlaying;
         };
 
-        // 初始化 - 使用容器尺寸，缩小游戏内容
+        // 初始化 - 使用容器尺寸适应悬浮窗
         function initCanvas() {
           const container = document.querySelector('.game-container');
           canvas.width = container ? container.clientWidth : window.innerWidth;
           canvas.height = container ? container.clientHeight : window.innerHeight;
-          console.log(`初始Canvas: ${canvas.width} x ${canvas.height} (适应iframe)`);
+          console.log(
+            `初始Canvas: ${canvas.width} x ${canvas.height}, iframe窗口: ${window.innerWidth} x ${window.innerHeight}`,
+          );
 
           // 强制触发一次resize事件，确保尺寸正确
           setTimeout(() => {
