--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -238,26 +238,38 @@
           touchActive: false,
         };
 
-        // 游戏尺寸计算
+        // 游戏尺寸计算 - 基于固定显示界面的智能缩放
         function calculateGameDimensions() {
-          // 使用iframe容器的实际尺寸，不是整个窗口
+          // 获取iframe容器的实际尺寸（固定显示界面）
           const container = document.querySelector('.game-container');
-          const vw = container ? container.clientWidth : window.innerWidth;
-          const vh = container ? container.clientHeight : window.innerHeight;
-          const isMobile = vw <= 768;
-          // 针对小窗口优化缩放
-          const scale = Math.min(0.8, Math.max(0.3, Math.min(vw / 800, vh / 600)));
-          const catSize = isMobile
-            ? Math.max(30, Math.min(vw * 0.08, vh * 0.08))
-            : Math.max(40, Math.min(vw * 0.1, vh * 0.1));
+          const containerWidth = container ? container.clientWidth : window.innerWidth;
+          const containerHeight = container ? container.clientHeight : window.innerHeight;
+
+          // 游戏的理想尺寸（游戏设计的原始尺寸）
+          const gameIdealWidth = 800;
+          const gameIdealHeight = 600;
+
+          // 计算缩放比例：让游戏完整适应显示界面
+          const scaleX = containerWidth / gameIdealWidth;
+          const scaleY = containerHeight / gameIdealHeight;
+          const scale = Math.min(scaleX, scaleY); // 保持游戏比例，取较小的缩放
+
+          console.log(
+            `显示界面: ${containerWidth}×${containerHeight}, 游戏理想尺寸: ${gameIdealWidth}×${gameIdealHeight}, 缩放: ${scale.toFixed(
+              2,
+            )} (｡◕‿◕｡)`,
+          );
+
+          const isMobile = containerWidth <= 400;
+          const catSize = 60 * scale; // 固定猫咪基础尺寸，然后按比例缩放
 
           return {
             catSize,
-            obstacleWidth: Math.min(15 * scale, vw * 0.02),
-            obstacleGap: Math.min(200 * scale, vw * 0.25),
-            jumpForce: -6 * scale,
-            gravity: 0.3 * scale,
-            speed: 3 * scale,
+            obstacleWidth: 20 * scale, // 障碍物宽度按比例缩放
+            obstacleGap: 250 * scale, // 障碍物间距按比例缩放
+            jumpForce: -8 * scale, // 跳跃力度按比例缩放
+            gravity: 0.4 * scale, // 重力按比例缩放
+            speed: 4 * scale, // 速度按比例缩放
             scale,
           };
         }
