--- a/Nyan_Cat.html
+++ b/Nyan_Cat.html
@@ -24,8 +24,8 @@
       body {
         margin: 0;
         padding: 0;
-        width: 60%;
-        min-height: 40vh;
+        width: 100%;
+        min-height: 60vh;
         overflow: hidden;
         background: #000;
         font-family: Arial, sans-serif;
@@ -40,14 +40,17 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #000;
       }
 
       /* 游戏画布 */
       #gameCanvas {
-        position: absolute;
-        inset: 0;
-        width: 100%;
-        height: 100%;
+        position: relative;
+        /* 移除定位属性，让Canvas由JS精确控制尺寸和位置 */
+        /* CSS不再设置尺寸，完全由JS控制 */
       }
 
       /* 猫咪角色 */
@@ -642,11 +645,11 @@
           canvas.style.width = canvasWidth + 'px';
           canvas.style.height = canvasHeight + 'px';
 
-          // 让Canvas在容器中居中
-          canvas.style.position = 'absolute';
-          canvas.style.left = '50%';
-          canvas.style.top = '50%';
-          canvas.style.transform = 'translate(-50%, -50%)';
+          // Canvas现在由flex容器自动居中，不需要手动定位
+          canvas.style.position = 'relative';
+          canvas.style.left = '';
+          canvas.style.top = '';
+          canvas.style.transform = '';
 
           console.log(
             `容器: ${containerWidth}×${containerHeight}, Canvas: ${canvasWidth}×${canvasHeight}, 保持4:3比例 (´∀｀)♡`,
